--- a/subgenreMappings.json
+++ b/subgenreMappings.json
@@ -1,1 +1,104 @@
+{
+  "alternative metal": {
+    "genre": "alternative"
+  },
+  "alternative rock": {
+    "genre": "alternative",
+    "es-ES": "rock alternativo"
+  },
 
+  "ambient": {
+    "genre": "ambient/drone"
+  },
+  "drone": {
+    "genre": "ambient/drone"
+  },
+
+  "piano ballad": {
+    "genre": "ballad"
+  },
+  "pop ballad": {
+    "genre": "ballad"
+  },
+
+  "lullaby": {
+    "genre": "children's music"
+  },
+  "nursery rhyme": {
+    "genre": "children's music"
+  },
+  
+  "ballet": {
+    "genre": "classical"
+  },
+  "concerto": {
+    "genre": "classical"
+  },
+  "dirge": {
+    "genre": "classical"
+  },
+  "étude": {
+    "genre": "classical"
+  },
+  "march": {
+    "genre": "classical"
+  },
+  "minuet": {
+    "genre": "classical"
+  },
+  "opera": {
+    "genre": "classical"
+  },
+  "scherzo": {
+    "genre": "classical"
+  },
+  "symphony": {
+    "genre": "classical"
+  },
+
+  "alternative country"": {
+    "genre": "country"
+  },
+  "bluegrass": {
+    "genre": "country"
+  },
+  "newgrass": {
+    "genre": "country"
+  },
+  "outlaw country": {
+    "genre": "country"
+  },
+  "truck drivin' country": {
+    "genre": "country"
+  }
+  
+  "black metal": {
+    "genre": "death/black metal"
+  },
+  "blackened death metal": {
+    "genre": "death/black metal"
+  },
+  "blackened thrash metal": {
+    "genre": "death/black metal"
+  },
+  "brutal death metal": {
+    "genre": "death/black metal"
+  },
+  "death metal": {
+    "genre": "death/black metal"
+  },
+  "deathrash": {
+    "genre": "death/black metal"
+  },
+  "viking metal": {
+    "genre": "death/black metal"
+  },
+  "war metal": {
+    "genre": "death/black metal"
+  },
+  
+  
+  "funeral doom metal": {
+    "genre": "doom metal"
+  },
+}
