Update truck-driving country mapping

--- a/subgenreMappings.json
+++ b/subgenreMappings.json
@@ -68,7 +68,7 @@
   "outlaw country": {
     "genre": "country"
   },
-  "truck drivin' country": {
+  "truck-driving country": {
     "genre": "country"
   }
   
