Fix malformed key

--- a/subgenreMappings.json
+++ b/subgenreMappings.json
@@ -56,7 +56,7 @@
     "genre": "classical"
   },
 
-  "alternative country"": {
+  "alternative country": {
     "genre": "country"
   },
   "bluegrass": {
